feat: P0/P1 기능 완료 - 초대 코드, 금액 미리보기, 검색 UI, 테스트 추가
- 초대 코드 입력 화면(JoinSettlementScreen) 및 InviteController 추가
- 정산 목록에 총 지출/참가자 수/라운드 수 요약 표시
- HomeScreen 검색바 추가 (디바운스 300ms, 타입 필터 연동)
- 게임 정산 결과 공유, 라운드 수정 기능
- 검색 엔드포인트 통합 테스트 및 요약 데이터 단위 테스트 추가

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>